force-app/main/default/objects/Education_Record__c/fields/CMAResponsibleinSteepRock__c.field-meta.xml
<CustomField>
    <fullName>CMAResponsibleinSteepRock__c</fullName>
    <label>CMA Responsible in SteepRock</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amber Anderson</fullName>
            </value>
            <value>
                <fullName>Amy Bardin</fullName>
            </value>
            <value>
                <fullName>Amy Mills</fullName>
            </value>
            <value>
                <fullName>April Martin</fullName>
            </value>
            <value>
                <fullName>Brandon Burney</fullName>
            </value>
            <value>
                <fullName>Brian Spence</fullName>
            </value>
            <value>
                <fullName>Donna Crawford</fullName>
            </value>
            <value>
                <fullName>Eileen Peterson</fullName>
            </value>
            <value>
                <fullName>Eric Reyer</fullName>
                <isActive>false</isActive>
                <label>Eric Reyer</label>
            </value>
            <value>
                <fullName>Erin Hill</fullName>
            </value>
            <value>
                <fullName>Gary Klimek</fullName>
            </value>
            <value>
                <fullName>Heather Wear</fullName>
            </value>
            <value>
                <fullName>Jaclyn Smith</fullName>
            </value>
            <value>
                <fullName>Jim Blosser</fullName>
            </value>
            <value>
                <fullName>JoAnna Webb</fullName>
            </value>
            <value>
                <fullName>Joshua Nuelken</fullName>
            </value>
            <value>
                <fullName>Katherine Renteria</fullName>
            </value>
            <value>
                <fullName>Keiler Brown</fullName>
            </value>
            <value>
                <fullName>Kelli Thomas</fullName>
            </value>
            <value>
                <fullName>Kelly Pulley</fullName>
            </value>
            <value>
                <fullName>Kent McCain</fullName>
            </value>
            <value>
                <fullName>Kersten Conley</fullName>
            </value>
            <value>
                <fullName>Kim Oliver</fullName>
            </value>
            <value>
                <fullName>Lexia Parker</fullName>
            </value>
            <value>
                <fullName>Megan Contino</fullName>
            </value>
            <value>
                <fullName>Michelle Pickrel</fullName>
            </value>
            <value>
                <fullName>Nadine Weller</fullName>
            </value>
            <value>
                <fullName>Rebekah Tessitore</fullName>
            </value>
            <value>
                <fullName>Sean Allen</fullName>
            </value>
            <value>
                <fullName>Terri Camp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>