force-app/main/default/objects/Education_Record__c/fields/ProctorshipType__c.field-meta.xml
<CustomField>
    <fullName>ProctorshipType__c</fullName>
    <label>Proctorship Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Proctoring Request</fullName>
            </value>
            <value>
                <fullName>Case-Coverage - Post Proctoring</fullName>
            </value>
            <value>
                <fullName>Peer-to-Peer Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>