force-app/main/default/objects/Education_Record__c/fields/SalesRepMobile__c.field-meta.xml
<CustomField>
    <fullName>SalesRepMobile__c</fullName>
    <formula>Sales_Rep__r.MobilePhone</formula>
    <inlineHelpText>If this is blank, Sales Rep associated will need to add their Mobile Number to their Salesforce User Record.</inlineHelpText>
    <label>Sales Rep Mobile</label>
    <type>Text</type>
</CustomField>