force-app/main/default/objects/Education_Record__c/fields/VACMember__c.field-meta.xml
<CustomField>
    <fullName>VACMember__c</fullName>
    <label>VAC Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>