force-app/main/default/objects/Education_Record__c/fields/VACMemberCount__c.field-meta.xml
<CustomField>
    <fullName>VACMemberCount__c</fullName>
    <formula>TEXT(Opportunity__r.VACMemberCount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>VAC Member Count from Opportunity</inlineHelpText>
    <label>VAC Member Count</label>
    <type>Text</type>
</CustomField>