force-app/main/default/objects/Education_Record__c/fields/VACSystem__c.field-meta.xml
<CustomField>
    <fullName>VACSystem__c</fullName>
    <formula>Text(Opportunity__r.VACSystem__c)</formula>
    <inlineHelpText>VAC Sytem Selected on the Opportunity</inlineHelpText>
    <label>VAC System</label>
    <type>Text</type>
</CustomField>