force-app/main/default/objects/Education_Record__c/fields/VAProduct1__c.field-meta.xml
<CustomField>
    <fullName>VAProduct1__c</fullName>
    <label>Primary Product 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Arrow® Endurance™ Extended Dwell Peripheral Catheter System</fullName>
            </value>
            <value>
                <fullName>Arrow® Integrated Arterial Catheter</fullName>
            </value>
            <value>
                <fullName>Arrow® Midline Kit Catheters (unprotected)</fullName>
            </value>
            <value>
                <fullName>Arrow® PICC (unprotected)</fullName>
            </value>
            <value>
                <fullName>Arrow® PICC powered by Arrow® VPS® G4 Precision™ Stylet</fullName>
            </value>
            <value>
                <fullName>Arrow® PICC powered by Arrow® VPS TipTracker™ Stylet</fullName>
            </value>
            <value>
                <fullName>Arrow® QuickFlash® Arterial Catheter</fullName>
            </value>
            <value>
                <fullName>Arrow® Seldinger Arterial Catheter (SAC)</fullName>
            </value>
            <value>
                <fullName>Arrow® Sharps-Protected Arterial Catheter</fullName>
            </value>
            <value>
                <fullName>Arrow® Standard Arterial Catheter</fullName>
            </value>
            <value>
                <fullName>Arrow® Twin Cath® Peripheral Catheter</fullName>
            </value>
            <value>
                <fullName>Arrow® VPS G4™ Device</fullName>
            </value>
            <value>
                <fullName>Arrow® VPS Rhythm® Device with ECG</fullName>
            </value>
            <value>
                <fullName>Arrow® VPS Rhythm® Device with TipTracker™ Technology</fullName>
            </value>
            <value>
                <fullName>Arrowg+ard Blue® Two-Lumen Hemodialysis Catheterization Kit for High Volume Infusions</fullName>
            </value>
            <value>
                <fullName>Arrowg+ard Blue® You-Bend™ Two-Lumen Hemodialysis Catheterization Kit for High Volume Infusions</fullName>
            </value>
            <value>
                <fullName>Arrowg+ard Blue Advance™ JACC</fullName>
            </value>
            <value>
                <fullName>Arrowg+ard Blue Advance™ Midline</fullName>
            </value>
            <value>
                <fullName>Arrowg+ard Blue Advance™ PICC</fullName>
            </value>
            <value>
                <fullName>Arrowg+ard Blue Advance™ PICC pre-loaded with Arrow® TipTracker™ Stylet</fullName>
            </value>
            <value>
                <fullName>Arrowg+ard Blue Advance™ PICC pre-loaded with Arrow® VPS G4 Precision™ Stylet</fullName>
            </value>
            <value>
                <fullName>Atomization</fullName>
            </value>
            <value>
                <fullName>AutoFuser Pain Pump</fullName>
            </value>
            <value>
                <fullName>Cardiac</fullName>
            </value>
            <value>
                <fullName>Complex PCI</fullName>
            </value>
            <value>
                <fullName>Control+</fullName>
            </value>
            <value>
                <fullName>DLX- Navigation only (Johans)</fullName>
                <isActive>false</isActive>
                <label>DLX- Navigation only (Johans)</label>
            </value>
            <value>
                <fullName>DLX Rhythm ECG only</fullName>
            </value>
            <value>
                <fullName>DLX rhythm-Navigation only</fullName>
                <isActive>false</isActive>
                <label>DLX rhythm-Navigation only</label>
            </value>
            <value>
                <fullName>DLX Rhythm TipTracker, US, and ECG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>