force-app/main/default/objects/Education_Record__c/recordTypes/ANES_EMS_Education_Record.recordType-meta.xml
<RecordType>
    <fullName>ANES_EMS_Education_Record</fullName>
    <active>true</active>
    <label>ANES/EMS Education Record</label>
</RecordType>