force-app/main/default/objects/Education_Record__c/recordTypes/Clinical_Sales_Program.recordType-meta.xml
<RecordType>
    <fullName>Clinical_Sales_Program</fullName>
    <active>true</active>
    <description>Clinical Sales Program for Vascular</description>
    <label>Clinical Sales Program</label>
</RecordType>