force-app/main/default/objects/Education_Record__c/recordTypes/CMA_Procedural_Lab.recordType-meta.xml
<RecordType>
    <fullName>CMA_Procedural_Lab</fullName>
    <active>true</active>
    <description>Cadaver Lab Request</description>
    <label>CMA Procedural Lab Request</label>
</RecordType>