force-app/main/default/objects/Education_Record__c/recordTypes/CMA_Program.recordType-meta.xml
<RecordType>
    <fullName>CMA_Program</fullName>
    <active>true</active>
    <description>CMA Program for Vascular</description>
    <label>CMA Program</label>
</RecordType>