force-app/main/default/objects/Education_Record__c/recordTypes/CMA_Record.recordType-meta.xml
<RecordType>
    <fullName>CMA_Record</fullName>
    <active>true</active>
    <label>CMA Record</label>
</RecordType>