force-app/main/default/objects/Education_Record__c/recordTypes/CMA_Record_MEG.recordType-meta.xml
<RecordType>
    <fullName>CMA_Record_MEG</fullName>
    <active>true</active>
    <label>CMA Record MEG</label>
</RecordType>