force-app/main/default/objects/Education_Record__c/recordTypes/CMA_Speaker_Request.recordType-meta.xml
<RecordType>
    <fullName>CMA_Speaker_Request</fullName>
    <active>true</active>
    <description>CMA Speaker Request (EZIO related topics requiring a MD or expert Speaker)</description>
    <label>CMA Speaker Request</label>
</RecordType>