force-app/main/default/objects/Education_Record__c/recordTypes/Education_Program_Request.recordType-meta.xml
<RecordType>
    <fullName>Education_Program_Request</fullName>
    <active>true</active>
    <description>Any onsite in-servicing or training requiring a contractor resource</description>
    <label>Live Education Program Request</label>
</RecordType>