force-app/main/default/objects/Education_Record__c/recordTypes/Education_Record.recordType-meta.xml
<RecordType>
    <fullName>Education_Record</fullName>
    <active>true</active>
    <description>Internally conducted education Sales, CEM, RCEM provided education</description>
    <label>REP/CEM Provided Training</label>
</RecordType>