force-app/main/default/objects/Education_Record__c/recordTypes/Inservice_Record.recordType-meta.xml
<RecordType>
    <fullName>Inservice_Record</fullName>
    <active>true</active>
    <label>Inservice Record</label>
</RecordType>