force-app/main/default/objects/Education_Record__c/recordTypes/Interventional_Education_Program.recordType-meta.xml
<RecordType>
    <fullName>Interventional_Education_Program</fullName>
    <active>true</active>
    <label>Interventional Education Program</label>
</RecordType>