force-app/main/default/objects/Education_Record__c/recordTypes/Online_Education_Program_Request.recordType-meta.xml
<RecordType>
    <fullName>Online_Education_Program_Request</fullName>
    <active>false</active>
    <description>Web based Training  (Learning Management System - LMS)</description>
    <label>Online Education Program Request</label>
</RecordType>