force-app/main/default/objects/Education_Record__c/recordTypes/Respiratory.recordType-meta.xml
<RecordType>
    <fullName>Respiratory</fullName>
    <active>true</active>
    <label>Respiratory</label>
</RecordType>