force-app/main/default/objects/Education_Record__c/recordTypes/Strategic_Vascular_Education_Programs.recordType-meta.xml
<RecordType>
    <fullName>Strategic_Vascular_Education_Programs</fullName>
    <active>true</active>
    <description>CVC, PICC and Arterial Courses, Vascular Speaker Programs</description>
    <label>Strategic Vascular Education Programs</label>
</RecordType>