force-app/main/default/objects/Education_Record__c/recordTypes/Surgical_Bariatric_Proctorship.recordType-meta.xml
<RecordType>
    <fullName>Surgical_Bariatric_Proctorship</fullName>
    <active>true</active>
    <label>Surgical Bariatric Proctorship</label>
</RecordType>